k8s/sb/frontend/frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: sb
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
  selector:
    app: frontend
